# Nano-SMCL

./: README.md
code/smcl_yolo_fused/crazyflie/: Makefile  Makefile_old  README.md  app-config
code/smcl_yolo_fused/crazyflie/src/: I2C_expander.c  I2C_expander.h  Kbuild  ToFplatform.c  spi_comm.c  spi_comm.h  test_tof.c  vl53l5cx_api.c  vl53l5cx_api.h
code/smcl_yolo_fused/gap9/: CMakeLists.txt  Expression_Kernels.c  Expression_Kernels.h  MCL_utils.c  best_float32.h  gpio_config.c  model.c  modelInfos.h  run_make.sh  sdk.config  smcl.c  spi_cmds_decode.c  spi_driver.c
code/smcl_yolo_fused/gap9/data/: edt.h  map.h  test_map.h
code/smcl_yolo_fused/gap9/data/S10/: odom.h  scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/data/S11/: odom.h  scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/data/S12/: odom.h  scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/data/S13/: odom.h  scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/data/S13/beginning/: odom.h  scan.h
code/smcl_yolo_fused/gap9/data/S14/: odom.h  scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/data/S15/: scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/data/S15/beginning/: odom.h
code/smcl_yolo_fused/gap9/data/S15/end/: odom.h  scan.h
code/smcl_yolo_fused/gap9/data/S4/: odom.h  scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/data/S6/: odom (copy).h  odom.h  scan (copy).h  scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/data/S7/: odom.h  scan.h  sem.h
code/smcl_yolo_fused/gap9/data/S8/: odom.h  scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/data/S9/: odom.h  scan.h  sem.h  sem_q.h
code/smcl_yolo_fused/gap9/inc/: MCL_config.h  MCL_types.h  MCL_utils.h  SPI_config.h  gpio_config.h  mcl_tests.h  spi_cmds_decode.h  spi_driver.h
code/smcl_yolo_fused/gap9/weights_tensors/: Model_37_6790_1.tensor  Model_37_tf_math_add_100_add_y.tensor  Model_37_tf_math_add_101_add_y.tensor  Model_37_tf_math_add_102_add_y.tensor  Model_37_tf_math_add_103_add_y.tensor  Model_37_tf_math_add_104_add_y.tensor  Model_37_tf_math_add_105_add_y.tensor  Model_37_tf_math_add_106_add_y.tensor  Model_37_tf_math_add_12_add_y.tensor  Model_37_tf_math_add_16_add_y.tensor  Model_37_tf_math_add_17_add_y.tensor  Model_37_tf_math_add_1_add_y.tensor  Model_37_tf_math_add_22_add_y.tensor  Model_37_tf_math_add_2_add_y.tensor  Model_37_tf_math_add_30_add_y.tensor  Model_37_tf_math_add_31_add_y.tensor  Model_37_tf_math_add_33_add_y.tensor  Model_37_tf_math_add_34_add_y.tensor  Model_37_tf_math_add_37_add_y.tensor  Model_37_tf_math_add_38_add_y.tensor  Model_37_tf_math_add_39_add_y.tensor  Model_37_tf_math_add_41_add_y.tensor  Model_37_tf_math_add_42_add_y.tensor  Model_37_tf_math_add_45_add_y.tensor  Model_37_tf_math_add_46_add_y.tensor  Model_37_tf_math_add_47_add_y.tensor  Model_37_tf_math_add_48_add_y.tensor  Model_37_tf_math_add_49_add_y.tensor  Model_37_tf_math_add_4_add_y.tensor  Model_37_tf_math_add_51_add_y.tensor  Model_37_tf_math_add_52_add_y.tensor  Model_37_tf_math_add_53_add_y.tensor  Model_37_tf_math_add_54_add_y.tensor  Model_37_tf_math_add_55_add_y.tensor  Model_37_tf_math_add_57_add_y.tensor  Model_37_tf_math_add_58_add_y.tensor  Model_37_tf_math_add_5_add_y.tensor  Model_37_tf_math_add_61_add_y.tensor  Model_37_tf_math_add_69_add_y.tensor  Model_37_tf_math_add_72_add_y.tensor  (+241 more)
model/: best.onnx  best.pt  main.py  pred2header.py
